--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "php": ">=5.4.9",
         "agitation/common-bundle": "dev-master",
         "agitation/intl-bundle": "dev-master",
+        "agitation/cron-bundle": "dev-master",
         "agitation/pluggable-bundle": "dev-master"
     },
     "autoload": {
