--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.9",
-        "agitation/common-bundle": "dev-master",
+        "agitation/base-bundle": "dev-master",
         "agitation/intl-bundle": "dev-master",
         "agitation/cron-bundle": "dev-master",
         "agitation/pluggable-bundle": "dev-master"
