registering cronjob as service tag rather than event

--- a/lib/Resources/config/services.yml
+++ b/lib/Resources/config/services.yml
@@ -2,7 +2,4 @@ services:
     agit.trigger:
         class: Agit\TriggerBundle\Service\TriggerService
         arguments : [ "@doctrine.orm.entity_manager", "@event_dispatcher" ]
-    agit.trigger.cleanup:
-        class: Agit\TriggerBundle\Service\CleanupService
-        arguments : [ "@doctrine.orm.entity_manager" ]
-        tags : [{ name: kernel.event_listener, event: agit.cron.register, method: cronjobRegistration }]
+        tags : [{ name: agit.cronjob, schedule: "*/10 * * * *", method: cleanup }]
