--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "symfony-bundle",
     "require": {
         "php": ">=5.4.9",
-        "agitation/base-bundle": "~1.0"
+        "agitation/base-bundle": "~1.0",
+        "agitation/cron-bundle": "~1.0"
     },
     "autoload": {
         "psr-4": {
